nexus/delta/statefulset.yaml
# adding a comment
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: delta
  namespace: nexus18-research
  labels:
    app: delta
spec:
  serviceName: delta-headless
  replicas: 1
  selector:
    matchLabels:
      app: delta
  template:
    metadata:
      namespace: nexus18-research
      labels:
        app: delta
    spec:
      containers:
        - name: delta
          image: bluebrain/nexus-delta:1.8.0
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: data-delta
              mountPath: /opt/binaries
            - name: delta-search-config
              mountPath: /opt/search-config
            - name: delta-cacerts
              mountPath: /opt/cacerts
              subPath: cacerts
            # - name: delta-config
            #   mountPath: /opt/appconf
          workingDir: "/tmp"
          command:
            - "/bin/bash"
            - "-c"
            - >
              [...]
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
            - containerPort: 9095
              name: prometheus
              protocol: TCP
          resources:
            requests:
              cpu: 8000m
              memory: 14Gi
            limits:
              cpu: 8000m
              memory: 14Gi
          livenessProbe:
            tcpSocket:
              port: http
            failureThreshold: 5
            successThreshold: 1
            initialDelaySeconds: 60
            periodSeconds: 5
            timeoutSeconds: 5
      volumes:
        - name: data-delta
          persistentVolumeClaim:
            claimName: data-delta
        - name: delta-search-config
          configMap:
            name: delta-search-config
        - name: delta-cacerts
          configMap:
            name: delta-cacerts
        # - name: delta-config
        #   configMap:
        #     name: delta-config
      terminationGracePeriodSeconds: 30
