nexus/delta/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: delta-headless
  namespace: nexus18-research
  labels:
    app: delta
spec:
  ports:
    - name: remoting
      port: 25520
      protocol: TCP
      targetPort: 25520
    - name: prometheus
      port: 9095
      protocol: TCP
      targetPort: 9095
  selector:
    app: delta
  clusterIP: None
  publishNotReadyAddresses: true
---
apiVersion: v1
kind: Service
metadata:
  name: delta
  namespace: nexus18-research
  labels:
    app: delta
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: delta
  sessionAffinity: None
  type: ClusterIP
